--- a/fixed-precision.cabal
+++ b/fixed-precision.cabal
@@ -1,5 +1,5 @@
 Name:              fixed-precision
-Version:           0.4.0
+Version:           0.5.0
 Synopsis:          Fixed Precision Arithmetic
 Description:
     Numeric instances for MPFR that use the \"Implicit Configurations\" from 
@@ -17,16 +17,27 @@ License-file:      LICENSE
 Author:            Edward Kmett
 Maintainer:        ekmett@gmail.com
 Category:          Math
-Build-type:        Simple
+Build-type:        Custom
 Cabal-version:     >=1.6
+extra-source-files: 
+  cbits/mkMpfrDerivedConstants.c
 
 Library
-  Exposed-modules: Numeric.Fixed
-  Build-depends:   base >= 4 && < 5,
-                   reflection >= 0.3.0 && < 0.4,
-                   hmpfr >= 0.3.1 && < 0.4,
-                   integer-gmp >= 0.2.0 && < 0.3,
-                   tagged >= 0.0 && < 0.1,
-                   template-haskell >= 2.4.0 && < 2.5
-  GHC-Options:     -Wall
-    
+  Exposed-modules: 
+    Numeric.Fixed.Precision
+    Numeric.Fixed.Rounding
+    Numeric.Fixed.Prim
+  Build-depends:   
+    base >= 4 && < 5,
+    reflection,
+    integer-gmp >= 0.2.0 && < 0.3,
+    ghc-prim,
+    tagged,
+    template-haskell >= 2.4.0 && < 2.6
+  GHC-Options: -Wall
+  c-sources:       
+    cbits/mpfr-wrappers.cmm
+  include-dirs: dist/include /opt/local/include
+  extra-libraries: mpfr
+  extra-lib-dirs: /opt/local/lib
+
