hacked up for testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
 _darcs
 dist
-Main.hi
+autom4te.cache
 Makefile
 config.log
 config.status
 docs
+*.hi
 *.o
 *.lo
 libmpfr.la
-mparam.h
 .libs
 .deps
 libtool
-config.h
 *~
 rounded.buildinfo
 stamp-h1
