port ghc/GC patches from mpfr-3.1.0 to mpfr-3.1.2

--- a/deps/mpfr-3.1.2/src/Makefile.am
+++ b/deps/mpfr-3.1.2/src/Makefile.am
@@ -55,7 +55,7 @@ zeta_ui.c set_d64.c get_d64.c jn.c yn.c rem1.c get_patches.c add_d.c	\
 sub_d.c d_sub.c mul_d.c div_d.c d_div.c li2.c rec_sqrt.c min_prec.c	\
 buildopt.c digamma.c bernoulli.c isregular.c set_flt.c get_flt.c	\
 scale2.c set_z_exp.c ai.c gammaonethird.c ieee_floats.h			\
-grandom.c
+grandom.c init2_malloc.c set_prec_realloc.c clear_free.c
 
 libmpfr_la_LIBADD = @LIBOBJS@
 
