--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-_darcs
 dist
-Main.hi
+*.hi
 Makefile
 config.log
 config.status
@@ -8,7 +7,8 @@ docs
 *.o
 *.lo
 libmpfr.la
-mparam.h
 .libs
 .deps
 libtool
+.DS_Store
+/deps/mpfr-*/src/mparam.h
