--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,19 @@
-language: haskell
+# Adapted from hvr's repository: https://github.com/hvr/multi-ghc-travis
+
+env:
+ - GHCVER=7.8.1
+
+ before_install:
+ - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
+ - travis_retry sudo apt-get update
+ - travis_retry sudo apt-get install cabal-install-1.18 ghc-$GHCVER happy
+ - export PATH=/opt/ghc/$GHCVER/bin:$PATH
+
+install:
+ - cabal-1.18 update
+ - cabal-1.18 install --only-dependencies --enable-tests --enable-benchmarks
+
+# Here starts the actual work to be performed for the package under test; any command which exits with a non-zero exit code causes the build to fail.
+script:
+ - cabal-1.18 configure --enable-tests --enable-benchmarks -v2  # -v2 provides useful information for debugging
+ - cabal-1.18 build   # this builds all libraries and executables (including tests/benchmarks)
