--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,40 @@
-# Adapted from hvr's repository: https://github.com/hvr/multi-ghc-travis
+# Adapted from https://raw.githubusercontent.com/hvr/multi-ghc-travis/master/.travis.yml
 
+# NB: don't set `language: haskell` here
+
+# See also https://github.com/hvr/multi-ghc-travis for more information
+
+# The following lines enable several GHC versions and/or HP versions
+# to be tested; often it's enough to test only against the last
+# release of a major GHC version. Setting HPVER implictly sets
+# GHCVER. Omit lines with versions you don't need/want testing for.
 env:
+ - GHCVER=6.12.3
+ - GHCVER=7.0.1
+ - GHCVER=7.0.2
+ - GHCVER=7.0.3
+ - GHCVER=7.0.4
+ - GHCVER=7.2.1
+ - GHCVER=7.2.2
+ - GHCVER=7.4.1
+ - GHCVER=7.4.2
+ - GHCVER=7.6.1
+ - GHCVER=7.6.2
+ - GHCVER=7.6.3
  - GHCVER=7.8.1
+ - HPVER=2013.2.0.0
+ - HPVER=2012.4.0.0
+ - HPVER=2012.2.0.0
+ - HPVER=2011.4.0.0
 
- before_install:
- - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
- - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-1.18 ghc-$GHCVER happy
+# Note: the distinction between `before_install` and `install` is not
+#       important.
+before_install:
+ - sudo add-apt-repository -y ppa:hvr/ghc
+ - sudo apt-get update
+ - sudo apt-get install cabal-install-1.18 ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
 
 install:
  - cabal-1.18 update
  - cabal-1.18 install --only-dependencies --enable-tests --enable-benchmarks
-
-# Here starts the actual work to be performed for the package under test; any command which exits with a non-zero exit code causes the build to fail.
-script:
- - cabal-1.18 configure --enable-tests --enable-benchmarks -v2  # -v2 provides useful information for debugging
- - cabal-1.18 build   # this builds all libraries and executables (including tests/benchmarks)
