--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,14 @@ before_install:
 install:
  - cabal-1.18 update
  - cabal-1.18 install --only-dependencies --enable-tests --enable-benchmarks
+
+# Here starts the actual work to be performed for the package under
+# test; any command which exits with a non-zero exit code causes the
+# build to fail.
+script:
+ # -v2 provides useful information for debugging
+ - cabal-1.18 configure --enable-tests --enable-benchmarks -v2
+
+ # this builds all libraries and executables
+ # (including tests/benchmarks)
+ - cabal-1.18 build
