--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,13 @@ env:
 # Note: the distinction between `before_install` and `install` is not
 #       important.
 before_install:
+ - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
  - sudo add-apt-repository -y ppa:hvr/ghc
- - sudo apt-get update
- - sudo apt-get install cabal-install-1.18 ghc-$GHCVER
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq gcc-4.8
+ - sudo apt-get install -qq cabal-install-1.18 ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
+ - export CC="gcc-4.8"
 
 install:
  - cabal-1.18 update
