--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,12 @@
 # Adapted from https://raw.githubusercontent.com/hvr/multi-ghc-travis/master/.travis.yml
-
-# NB: don't set `language: haskell` here
-
-# See also https://github.com/hvr/multi-ghc-travis for more information
-
-# The following lines enable several GHC versions and/or HP versions
-# to be tested; often it's enough to test only against the last
-# release of a major GHC version. Setting HPVER implictly sets
-# GHCVER. Omit lines with versions you don't need/want testing for.
 env:
  - GHCVER=7.8.1
 
-# Note: the distinction between `before_install` and `install` is not
-#       important.
 before_install:
  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
  - sudo add-apt-repository -y ppa:hvr/ghc
  - sudo apt-get update -qq
+ # We need gcc 4.8 because the default 4.6 has a bug with MPFR: https://bugs.launchpad.net/ubuntu/+source/gcc-4.6/+bug/968766
  - sudo apt-get install -qq gcc-4.8
  - sudo apt-get install -qq cabal-install-1.18 ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
@@ -26,13 +16,6 @@ install:
  - cabal-1.18 update
  - cabal-1.18 install --only-dependencies --enable-tests --enable-benchmarks
 
-# Here starts the actual work to be performed for the package under
-# test; any command which exits with a non-zero exit code causes the
-# build to fail.
 script:
- # -v2 provides useful information for debugging
  - cabal-1.18 configure --enable-tests --enable-benchmarks -v2
-
- # this builds all libraries and executables
- # (including tests/benchmarks)
  - cabal-1.18 build
