--- a/rounded.cabal
+++ b/rounded.cabal
@@ -33,7 +33,9 @@ source-repository head
   location: git://github.com/ekmett/rounded.git
 
 library
-  exposed-modules: Numeric.Rounded
+  exposed-modules:
+    Numeric.Rounded
+    Numeric.Rounded.Interval
 
   other-modules:
     Numeric.Rounded.Rounding
@@ -49,7 +51,7 @@ library
     tagged           >= 0.4.4 && < 0.8,
     template-haskell >= 2.4   && < 2.10
 
-  ghc-options:     -Wall -Werror -O2 -fspec-constr -funbox-strict-fields
+  ghc-options:     -Wall -O2 -fspec-constr -funbox-strict-fields
   c-sources:       cbits/mpfr-wrappers.cmm
   include-dirs:    dist/include
   hs-source-dirs:  src
