--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ before_install:
  - sudo add-apt-repository -y ppa:hvr/ghc
  - sudo apt-get update -qq
  # We need gcc 4.8 because the default 4.6 has a bug with MPFR: https://bugs.launchpad.net/ubuntu/+source/gcc-4.6/+bug/968766
- - sudo apt-get install -qq gcc-4.8
- - sudo apt-get install -qq cabal-install-1.18 ghc-$GHCVER
- - export PATH=/opt/ghc/$GHCVER/bin:$PATH
+ - travis_retry sudo apt-get install -qq gcc-4.8
+ - travis_retry sudo apt-get install cabal-install-1.18 ghc-$GHCVER happy-1.19.3
+ - export PATH=/opt/happy/1.19.3/bin:/opt/ghc/$GHCVER/bin:$PATH
  - export CC="gcc-4.8"
 
 install:
