--- a/rounded.cabal
+++ b/rounded.cabal
@@ -9,10 +9,9 @@ author:             Edward A. Kmett, Daniel G. Peebles
 maintainer:         Edward A. Kmett <ekmett@gmail.com>
 copyright:          Copyright (C) 2012-2014 Edward A. Kmett, Daniel G. Peebles
 category:           Numeric, Math
-build-type:         Custom
+build-type:         Simple
 cabal-version:      >= 1.22
 tested-with:        GHC == 7.8.1, GHC == 7.8.4
-extra-source-files: cbits/mkMpfrDerivedConstants.c, cbits/alloc.c
 description:
     This package provides numeric instances for MPFR that use
     \"Implicit Configurations\" from
@@ -55,8 +54,6 @@ library
   -- http://code.mathr.co.uk/hgmp
 
   ghc-options:     -Wall -O2 -fspec-constr -funbox-strict-fields
-  c-sources:       cbits/mpfr-wrappers.cmm
-  include-dirs:    dist/include
   build-tools:     hsc2hs
 
   extra-libraries: mpfr
