--- a/rounded.cabal
+++ b/rounded.cabal
@@ -11,7 +11,7 @@ copyright:          Copyright (C) 2012-2014 Edward A. Kmett, Daniel G. Peebles
 category:           Numeric, Math
 build-type:         Simple
 cabal-version:      >= 1.22
-tested-with:        GHC == 7.8.1, GHC == 7.8.4
+tested-with:        GHC == 7.10.1
 description:
     This package provides numeric instances for MPFR that use
     \"Implicit Configurations\" from
@@ -20,7 +20,7 @@ description:
     use reflection, explicit instances are provided for common precisions
     and for the built-in rounding modes.
     .
-    This package should link correctly on either MacOS X or Linux with GHC 7.8.1 or later.
+    This package should link correctly on either MacOS X or Linux with GHC 7.10.1 or later.
     .
     >>> import Numeric.Rounded
     >>> :set -XDataKinds
