--- a/rounded.cabal
+++ b/rounded.cabal
@@ -8,7 +8,7 @@ license-file:       LICENSE
 author:             Edward A. Kmett, Daniel G. Peebles
 maintainer:         Edward A. Kmett <ekmett@gmail.com>
 copyright:          Copyright (C) 2012-2014 Edward A. Kmett, Daniel G. Peebles
-                    Copyright (C) 2015,2017 Claude Heiland-Allen
+                    Copyright (C) 2013-2017 Claude Heiland-Allen
 category:           Numeric, Math
 build-type:         Simple
 cabal-version:      >= 1.22
