--- a/rounded.cabal
+++ b/rounded.cabal
@@ -55,6 +55,7 @@ library
   extra-libraries: mpfr
 
   hs-source-dirs:  src
+  c-sources:       cbits/wrappers.c
 
   default-language: Haskell2010
   other-extensions:
