move definition of the Rounded type to a non-exposed Internal module

--- a/rounded.cabal
+++ b/rounded.cabal
@@ -41,6 +41,7 @@ library
     Numeric.MPFR.Raw.Unsafe
 
   other-modules:
+    Numeric.Rounded.Internal
     Numeric.Rounded.Rounding
     Numeric.Rounded.Precision
 
