--- a/rounded.cabal
+++ b/rounded.cabal
@@ -52,7 +52,7 @@ library
     singletons       >= 2.1     && < 2.4,
     hgmp             >= 0.1.1   && < 0.2
 
-  ghc-options:     -Wall -O2 -fspec-constr -funbox-strict-fields -fno-warn-unticked-promoted-constructors
+  ghc-options:     -Wall -fspec-constr -funbox-strict-fields -fno-warn-unticked-promoted-constructors
   build-tools:     hsc2hs
 
   extra-libraries: mpfr
