--- a/rounded.cabal
+++ b/rounded.cabal
@@ -48,8 +48,8 @@ library
     Numeric.Rounded.Precision
 
   build-depends:
-    base             >= 4.8     && < 5,
-    ghc-prim,
+    base             >= 4.8     && < 4.11,
+    ghc-prim         >= 0.4     && < 0.6,
     reflection       >= 2.1.2   && < 2.2,
     singletons       >= 2.1     && < 2.4,
     hgmp             >= 0.1.1   && < 0.2
