bind to constants with hsc2hs instead of using hardcoded numbers

--- a/rounded.cabal
+++ b/rounded.cabal
@@ -83,6 +83,7 @@ library
     KindSignatures
     MagicHash
     MultiParamTypeClasses
+    PatternSynonyms
     PolyKinds
     Rank2Types
     RankNTypes
