--- a/rounded.cabal
+++ b/rounded.cabal
@@ -11,7 +11,7 @@ copyright:          Copyright (C) 2012-2014 Edward A. Kmett, Daniel G. Peebles;
                     Copyright (C) 2013-2018 Claude Heiland-Allen
 category:           Numeric, Math
 build-type:         Simple
-cabal-version:      >= 1.22
+cabal-version:      1.22
 tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.1
 description:
     This package provides numeric instances for MPFR that use
